--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>三个项目</p>
-    <a href="">京东_仿</a>
-    <a href="">起点中文网</a>
-    <a href="">永乐票务</a>
+    <a href="https://fan-yue.github.io/SchoolProject_git/DXjd">京东_仿</a>
+    <a href="https://fan-yue.github.io/SchoolProject_git/DXqd">起点中文网_仿</a>
+    <a href="https://fan-yue.github.io/SchoolProject_git/DXyl">永乐票务_仿</a>
 </body>
 </html>
